@@ -11,6 +11,7 @@
 
 1.9.6 (2012-04-??)
  + New settings.xml option: <garminCustomMaxMapCount>
+ + New atlas format: TomTom raster
 
 1.9.5 (2012-03-09)
  ! Alpine Quest Map: Multiple bugs fixed (#3484328)
